css/index.css
@font-face {
    font-family: "Roboto";
    src: url(../Fonts/roboto/Roboto-Regular.ttf);
}

@font-face {
    font-family: "Roboto Bold";
    src: url(../Fonts/roboto/Roboto-Black.ttf);
}

@font-face {
    font-family: "Roboto Light Italic";
    src: url(../Fonts/roboto/Roboto-LightItalic.ttf);
}

@font-face {
    font-family: "Work-Sans";
    src: url(../Fonts/work-sans/WorkSans-Regular.ttf);
}

@font-face {
    font-family: "Work-Sans Bold";
    src: url(../Fonts/work-Sans/WorkSans-Black.ttf);
}

@font-face {
    font-family: "Work-Sans Light Italic";
    src: url(../Fonts/work-Sans/WorkSans-LightItalic.ttf);
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: "Work-Sans","Roboto", sans-serif;
    margin: 0;
}

.page-center {
    width: 75%;
    margin: auto;
}

.header {
    margin: 0;
    background-color: #1F2937;
    color: #E5E7EB;
    padding-top: 20px;
}

a {
    text-decoration: none;
    color: #8fa7d7;
}

.hero {
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: "Work-Sans Bold","Roboto Bold", sans-serif;
}

.hero>.header-logo {
    padding-left: 5%;
    flex: 4 1 auto;
    display: flex;
    justify-content: left;
    align-items: center;
    margin-right: auto;
/*  font-family: "Work-Sans Bold", "Roboto Bold", sans-serif;
    font-size: 24px;*/
}

.hero>.header-logo-link:hover {
    cursor: pointer;
}

.hero>.header-links {
    flex: auto;
    text-align: center;
    margin-left: auto;
    padding: 10px;
    font-family: "Roboto", sans-serif;
    font-size: 18px;
    display: flex;
}

.header-links>.header-link-one,
.header-links>.header-link-two,
.header-links>.header-link-three {
    flex: 1 1 100px;
    text-align: center;
    margin-left: auto;
    padding: 10px;
    font-family: "Work-Sans", "Roboto", sans-serif;
    font-size: 18px;
}

.main-body {
    display: flex;
    padding-top: 100px;
    justify-content: space-around;
    align-items: center;
    gap: 100px;
    padding-bottom: 150px;
    flex-wrap: wrap-reverse;
}

.hero-text {
    flex: 1;
}

.hero-text>.hero-main-text {
    font-size: 48px;
    font-family: "Work-Sans Bold", "Roboto Bold", sans-serif;
    color: #F9FAF8;
    word-wrap: break-word;
}

.hero-text>.hero-secondary-text {
    font-size: 18px;
    color: #E5E7EB;
}

.main-body-image {
    flex: 1;
    /*width: 300px;*/
    overflow: hidden;
    display: flex;
    justify-content: center;
    min-width: 250px;
    border-radius: 15px;
    align-self: flex-start;
}

.secondary-body {
    background-color: white;
    margin-bottom: 100px;
}

.secondary-body>.information-header {
    font-size: 36px;
    font-family: "Work-Sans Bold", "Roboto Bold", sans-serif;
    color: #1F2937;
    text-align: center;
    word-wrap: none;
    padding: 50px;
}

.info-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    flex-direction: row;
}

.info-cards>.info-card-1,
.info-cards>.info-card-2,
.info-cards>.info-card-3 {
    flex: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    font-size: 18px;
    text-align: center;
    color: #1F2937;
    min-width: 250px;
    max-width: 250px;
    border-radius: 20px;
    margin: 10px;
}

.info-card-1>.info-card-img-1,
.info-card-2>.info-card-img-2,
.info-card-3>.info-card-img-3 {
    flex: 0;
    border-radius: 15px;
    border: 5px Solid #3882F6;
    width: 250px;
    min-width: 200px;
    border-radius: 15px;
    align-self: flex-start;
}

.info-card-1>.info-card-subtitle-1,
.info-card-2>.info-card-subtitle-2,
.info-card-3>.info-card-subtitle-3 {
    flex: 0 0 auto;
    padding: 20px 10px;
}

.quote-body {
    background-color: #E5E7EB;
    padding: 70px 0px;
}

.quote-body>a {
    text-decoration: none;
}

.quote-body>.quote-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.quote-container>.quote {
    flex: 1;
    color: #1F2937;
    font-family: "Work-Sans Light Italic", "Roboto Light Italic", sans-serif;
    font-size: 36px;
    text-align: center;
    padding: 20px 0px;
}

.quote-container>.quote-author {
    flex: 1;
    color: #1F2937;
    font-family: "Work-Sans Bold", "Roboto Bold", sans-serif;
    font-size: 24px;
    text-align: right;
    padding: 20px 0px;
}

.third-body {
    background-color: #F9FAF8;
    padding: 100px 0px;
}

.third-body>.reach-out-card-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.reach-out-card-container>.reach-out-card {
    flex: 1;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    background-color: #3882F6;
    border-radius: 10px;
    padding: 20px 30px;
    gap: 50px;
}

.reach-out-card>.reach-out-card-text {
    flex: 1;
    display: flex;
    flex-direction: column;
}

.reach-out-card-text>.reach-out-card-text-1,
.reach-out-card-text>.reach-out-card-text-2 {
    flex: 1;
    padding-bottom: 5px; 
}

.reach-out-card-text>.reach-out-card-text-1 {
    font-family: "Work-Sans Bold", "Roboto Bold", sans-serif;
    font-size: 24px;
    color: #E5E7EB;
    min-width: 260px;
}

.reach-out-card-text>.reach-out-card-text-2 {
    font-size: 18px;
    color: #E5E7EB;
}

.reach-out-card-discord-button {
    text-decoration: none;
}

.reach-out-card>.reach-out-card-discord-button {
    flex: 0 0 150px;
    width: 150px;
    height: 35px;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: border 0.3s ease;
    border-radius: 10px;
    border: 3px solid #F9FAF8;
    color: #E5E7EB;
}

.reach-out-card-discord-button:hover {
    cursor: pointer;
    border: 3px solid #bcbcbc;
}

.footer {
    margin: 0;
    background-color: #1F2937;
    color: #E5E7EB;
    padding: 20px 0px 15px 0px;
}

.footer>.footer-container {
    display: flex;
    flex: auto;
    justify-content: center;
    align-items: center;
    font-family: "Work-Sans Light Italic", "Roboto Light Italic", sans-serif;
}

.footer-container>.footer-text {
    flex: 1;
    text-align: center;
    font-size: 18px;
    line-height: 200%;
}

